--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
 		<video controls>
 			<source src="3.mp4" type="video/mp4" />
 		</video>
+
+		<hr>
+
+		<img src="https://deanherring.github.io/sigame_archive/img1.jpg" alt="">
 	</body>
 </html>
