--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 
 		<hr>
 
-		<img src="https://deanherring.github.io/sigame_archive/img1.jpg" alt="">
+		<img src="https://deanherring.github.io/sigame_archive/img/1.jpg" alt="">
 	</body>
 </html>
