--- a/index.html
+++ b/index.html
@@ -16,8 +16,110 @@
 			<source src="3.mp4" type="video/mp4" />
 		</video>
 
-		<hr>
+		<hr />
 
-		<img src="https://deanherring.github.io/sigame_archive/img/1.jpg" alt="">
+		<img src="https://deanherring.github.io/sigame_archive/img/1.jpg" alt="" />
+
+		<ul>
+			<li>
+				<p>Ленинград</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/leningrad/Ленинград - Вояж (ориг).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/leningrad/leningrad (reverse).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Агата Кристи</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/агата кристи/Агата Кристи - Как на войне (ориг).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/агата кристи/Агата Кристи - Как на войне (наоборот) .mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Король и Шут</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/король и шут/Король и Шут - Лесник (ориг).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/король и шут/Король и Шут - Лесник (наоборот).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Кровосток</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/кровосток лоси/Кровосток - Лоси (ориг).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/кровосток лоси/Кровосток - Лоси ( наоборот ).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Пурген</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/пурген/Пурегн - Серый бетон (ориг).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/пурген/Пурген - Серый бетон (наоборот).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+		</ul>
 	</body>
 </html>
