--- a/index.html
+++ b/index.html
@@ -120,6 +120,127 @@
 						/></audio
 				></span>
 			</li>
+			<hr />
+			<li>
+				<p>Пурген</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/пурген/Пурегн - Серый бетон (ориг).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/пурген/Пурген - Серый бетон (наоборот).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Boney M</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 2/Boney M/boney-m-rasputin_VhKHjiTL (norm).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 2/Boney M/boneym-rasputin-audiotrimmercom_5KgKpoqG.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Crazy Frog</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 2/Crazy Frog/crazy-frog-axel-f_qKQyprzL.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 2/Crazy Frog/crazy-frog_K0B4In1B(reverse).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Eli</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 2/Eli/eli-faster-you-fall_Ig3ebcJP(norm).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 2/Eli/eli-faster-you-fallmp3_YLzBR9dn.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Michael Jackson</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 2/Michael Jackson/michael-jackson-billie-jean_QDaZOPU0(norm).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 2/Michael Jackson/michaeljackson-billiejean-audiotrimmercom-1_UHvKdxAk.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Stromae</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 2/Stromae/stromae-tous-les-mmes_PTJXMLGG.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 2/Stromae/stromae-tous-les-mmes_ayQNfftb(reverse).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
 		</ul>
 	</body>
 </html>
