--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<hr />
 
 		<img src="https://deanherring.github.io/sigame_archive/img/1.jpg" alt="" />
+		<img src="https://deanherring.github.io/sigame_archive/img/2.jpg" alt="" />
 
 		<ul>
 			<li>
