--- a/index.html
+++ b/index.html
@@ -242,6 +242,106 @@
 				></span>
 			</li>
 			<hr />
+			<li>
+				<p>Кино</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 3/ориг/2 Кино - Разpеши мне.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 3/кавер/1 Partak - Разреши мне.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Гражданская оборона</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 3/ориг/4 Гражданская Оборона - Без меня.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 3/кавер/3 Алиса Хазанова - Без меня.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Ленинград</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 3/ориг/6 Ленинград - Любит Наш Народ.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 3/кавер/5 Детский Хор - Наш народ.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Nathan Evans</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 3/ориг/8 Nathan Evans - Wellerman.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 3/кавер/7 Wellerman на древнем русском языке.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
+			<li>
+				<p>Patrice Rushen</p>
+				<span
+					>Оригинал:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 3/ориг/10 Patrice Rushen - Forget Me Nots.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+				<span
+					>Наоборот:
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/music/музяка 3/кавер/9 Men In Black - Beatbox cover (Loopstation).mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<hr />
 		</ul>
 	</body>
 </html>
