--- a/index.html
+++ b/index.html
@@ -343,5 +343,23 @@
 			</li>
 			<hr />
 		</ul>
+
+		<hr />
+
+		<video controls>
+			<source src="https://deanherring.github.io/sigame_archive/porn/2 Японская реклама молока.mp4" type="video/mp4" />
+		</video>
+		<video controls>
+			<source src="https://deanherring.github.io/sigame_archive/porn/5 Folgers Coffee.mp4" type="video/mp4" />
+		</video>
+		<video controls>
+			<source src="https://deanherring.github.io/sigame_archive/porn/Без названия (online-video-cutter.com).mp4" type="video/mp4" />
+		</video>
+		<video controls>
+			<source src="https://deanherring.github.io/sigame_archive/porn/Всемирная_история_Банк_Империал_online_video_cutter_com.mp4" type="video/mp4" />
+		</video>
+		<video controls>
+			<source src="https://deanherring.github.io/sigame_archive/porn/ЛУЧШАЯ_ЯПОНСКАЯ_РЕКЛАМА_3_online_video_cutter_com.mp4" type="video/mp4" />
+		</video>
 	</body>
 </html>
