--- a/index.html
+++ b/index.html
@@ -347,19 +347,84 @@
 		<hr />
 
 		<video controls>
-			<source src="https://deanherring.github.io/sigame_archive/porn/2 Японская реклама молока.mp4" type="video/mp4" />
+			<source
+				src="https://deanherring.github.io/sigame_archive/porn/2 Японская реклама молока.mp4"
+				type="video/mp4"
+			/>
 		</video>
 		<video controls>
-			<source src="https://deanherring.github.io/sigame_archive/porn/5 Folgers Coffee.mp4" type="video/mp4" />
+			<source
+				src="https://deanherring.github.io/sigame_archive/porn/5 Folgers Coffee.mp4"
+				type="video/mp4"
+			/>
 		</video>
 		<video controls>
-			<source src="https://deanherring.github.io/sigame_archive/porn/Без названия (online-video-cutter.com).mp4" type="video/mp4" />
+			<source
+				src="https://deanherring.github.io/sigame_archive/porn/Без названия (online-video-cutter.com).mp4"
+				type="video/mp4"
+			/>
 		</video>
 		<video controls>
-			<source src="https://deanherring.github.io/sigame_archive/porn/Всемирная_история_Банк_Империал_online_video_cutter_com.mp4" type="video/mp4" />
+			<source
+				src="https://deanherring.github.io/sigame_archive/porn/Всемирная_история_Банк_Империал_online_video_cutter_com.mp4"
+				type="video/mp4"
+			/>
 		</video>
 		<video controls>
-			<source src="https://deanherring.github.io/sigame_archive/porn/ЛУЧШАЯ_ЯПОНСКАЯ_РЕКЛАМА_3_online_video_cutter_com.mp4" type="video/mp4" />
+			<source
+				src="https://deanherring.github.io/sigame_archive/porn/ЛУЧШАЯ_ЯПОНСКАЯ_РЕКЛАМА_3_online_video_cutter_com.mp4"
+				type="video/mp4"
+			/>
 		</video>
+
+				<hr/>
+
+		<ul>
+			<li>
+				<p>Иосиф Сталин:</p>
+				<audio controls>
+						<source
+							src="https://deanherring.github.io/people/Иосиф Сталин.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+						<li>
+				<p>xQc:</p>
+				<audio controls>
+						<source
+							src="https://deanherring.github.io/people/xqc.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+						<li>
+				<p>Андрей Курпатов:</p>
+				<audio controls>
+						<source
+							src="https://deanherring.github.io/people/Курпатов.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+						<li>
+				<p>Петр Чайковский:</p>
+				<audio controls>
+						<source
+							src="https://deanherring.github.io/people/Петр Чайковский.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+						<li>
+				<p>Хесус:</p>
+				<audio controls>
+						<source
+							src="https://deanherring.github.io/people/Хесус.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+		</ul>
 	</body>
 </html>
