--- a/index.html
+++ b/index.html
@@ -377,19 +377,60 @@
 			/>
 		</video>
 
-				<hr/>
+		<hr />
 
 		<ul>
 			<li>
-				<p>Иосиф Сталин:</p>
-				<audio controls>
+				<p>Иосиф Сталин</p>
+				<span>
+					<audio controls>
 						<source
-							src="https://deanherring.github.io/people/Иосиф Сталин.mp3"
+							src="https://deanherring.github.io/sigame_archive/people/Иосиф Сталин.mp3"
 							type="audio/mpeg"
 						/></audio
 				></span>
 			</li>
-						<li>
+			<li>
+				<p>xQc</p>
+				<span>
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/people/xqc.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<li>
+				<p>Андрей Курпатов</p>
+				<span>
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/people/Курпатов.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<li>
+				<p>Хесус</p>
+				<span>
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/people/Хесус.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<li>
+				<p>Петр Чайковский</p>
+				<span>
+					<audio controls>
+						<source
+							src="https://deanherring.github.io/sigame_archive/people/Петр Чайковский.mp3"
+							type="audio/mpeg"
+						/></audio
+				></span>
+			</li>
+			<!-- 						<li>
 				<p>xQc:</p>
 				<audio controls>
 						<source
@@ -424,7 +465,7 @@
 							type="audio/mpeg"
 						/></audio
 				></span>
-			</li>
+			</li> -->
 		</ul>
 	</body>
 </html>
