--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
 						/></audio
 				></span>
 			</li> -->
+			<img src="https://deanherring.github.io/img/vs-code-background.jpg">
 		</ul>
 	</body>
 </html>
